force-app/main/default/objects/Purchase_Order__c/fields/Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name__c</fullName>
    <formula>$User.LastName + &quot;, &quot; +  $User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Name</label>
    <type>Text</type>
</CustomField>