force-app/main/default/objects/Purchase_Order__c/fields/Create_Supplier_Bill__c.field-meta.xml
<CustomField>
    <fullName>Create_Supplier_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Supplier Bill</label>
    <type>Checkbox</type>
</CustomField>