force-app/main/default/objects/Purchase_Order__c/fields/Customer_PO_or_Quote__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_or_Quote__c</fullName>
    <formula>Brand_Quote__r.Customer_PO_or_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order or Service #</label>
    <type>Text</type>
</CustomField>