force-app/main/default/objects/Purchase_Order__c/fields/Distributor_License_Class__c.field-meta.xml
<CustomField>
    <fullName>Distributor_License_Class__c</fullName>
    <formula>TEXT(Distributor_License__r.License_Class__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor License Class</label>
    <type>Text</type>
</CustomField>