force-app/main/default/objects/Purchase_Order__c/fields/Flag_for_closed_Status__c.field-meta.xml
<CustomField>
    <fullName>Flag_for_closed_Status__c</fullName>
    <description>This field is being used as rollup field to check if all POLI&apos;s are closed to Close this PO.</description>
    <label>Flag for closed Status</label>
    <summarizedField>Purchase_Order_Line__c.Flag_for_closed_Status__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>