force-app/main/default/objects/Purchase_Order__c/fields/Goods_Receipt_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Goods_Receipt_Closed_Date__c</fullName>
    <formula>IF(ISPICKVAL(PO_Status__c, &apos;Closed&apos;),  LastModifiedDate ,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goods Receipt Closed Date</label>
    <type>Date</type>
</CustomField>