force-app/main/default/objects/Purchase_Order__c/fields/Last_Recalc_History__c.field-meta.xml
<CustomField>
    <fullName>Last_Recalc_History__c</fullName>
    <label>Last Recalc History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>