force-app/main/default/objects/Purchase_Order__c/fields/Next_Payable_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payable_Date__c</fullName>
    <formula>IF(Retailer_Collection_Status__c = &apos;Paid in Full&apos;, Last_Payment_Date__c + 8 - WEEKDAY(Last_Payment_Date__c) + 8 - 3, Null)</formula>
    <label>Next Payable Date</label>
    <type>Date</type>
</CustomField>