force-app/main/default/objects/Purchase_Order__c/fields/Payment_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Payment_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applies to Product PO Only if Eligible for Supplier Bill</inlineHelpText>
    <label>Payment Eligible</label>
    <type>Checkbox</type>
</CustomField>