force-app/main/default/objects/Purchase_Order__c/fields/Pick_up_City__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_City__c</fullName>
    <formula>Text(Supplier_License__r.License_City__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pick-up City</label>
    <type>Text</type>
</CustomField>