force-app/main/default/objects/Purchase_Order__c/fields/Planned_Ship_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Ship_Transfer_Date__c</fullName>
    <label>Planned Ship/Transfer Date</label>
    <type>Date</type>
</CustomField>