force-app/main/default/objects/Purchase_Order__c/fields/PO_Balance__c.field-meta.xml
<CustomField>
    <fullName>PO_Balance__c</fullName>
    <formula>Total_Cost__c -  Total_Payments_Made__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>