force-app/main/default/objects/Purchase_Order__c/fields/PO_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Type__c</fullName>
    <description>Type of PO created from Quote/SO</description>
    <label>PO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy Quote</fullName>
            </value>
            <value>
                <fullName>Sell Quote</fullName>
            </value>
            <value>
                <fullName>Service Quote</fullName>
            </value>
            <value>
                <fullName>Transfer Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>