force-app/main/default/objects/Purchase_Order__c/fields/Promised_Date__c.field-meta.xml
<CustomField>
    <fullName>Promised_Date__c</fullName>
    <label>Promised Date</label>
    <summarizedField>Purchase_Order_Line__c.Promised_Date__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>