force-app/main/default/objects/Purchase_Order__c/fields/Purchase_Order_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Instructions__c</fullName>
    <label>Purchase Order Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>