force-app/main/default/objects/Purchase_Order__c/fields/R_D_Cost__c.field-meta.xml
<CustomField>
    <fullName>R_D_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>R&amp;D Cost</label>
    <type>Checkbox</type>
</CustomField>