force-app/main/default/objects/Purchase_Order__c/fields/Receiver_Address__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Address__c</fullName>
    <formula>Receiver_License__r.License_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver Address</label>
    <type>Text</type>
</CustomField>