force-app/main/default/objects/Purchase_Order__c/fields/Receiver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Orders (Receiver Contact)</relationshipLabel>
    <relationshipName>Purchase_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>