force-app/main/default/objects/Purchase_Order__c/fields/Receiver_License__c.field-meta.xml
<CustomField>
    <fullName>Receiver_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver License</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>State_Licenses__c.License_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Receiver_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Purchase Orders (Receiver License)</relationshipLabel>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>