force-app/main/default/objects/Purchase_Order__c/fields/Receiving_Fee__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Fee__c</fullName>
    <label>Receiving Fee</label>
    <summarizedField>Purchase_Order_Line__c.Receiving_Fee__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>