force-app/main/default/objects/Purchase_Order__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <label>Request Date</label>
    <summarizedField>Purchase_Order_Line__c.Request_Date__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>