force-app/main/default/objects/Purchase_Order__c/fields/Retailer_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Collection_Status__c</fullName>
    <formula>TEXT(Brand_Quote__r.Collection_Status__c )</formula>
    <label>Retailer Collection Status</label>
    <type>Text</type>
</CustomField>