force-app/main/default/objects/Purchase_Order__c/fields/Service_Scheduling_Fee__c.field-meta.xml
<CustomField>
    <fullName>Service_Scheduling_Fee__c</fullName>
    <label>Service Scheduling Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>