force-app/main/default/objects/Purchase_Order__c/fields/Ship_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Confirmation_Date__c</fullName>
    <formula>Brand_Quote__r.Ship_Confirmation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship Confirmation Date</label>
    <type>Date</type>
</CustomField>