force-app/main/default/objects/Purchase_Order__c/fields/Sold_to_Party_DBA__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Party_DBA__c</fullName>
    <formula>Brand_Quote__r.Receiver_DBA__c</formula>
    <label>Sold to Party DBA</label>
    <type>Text</type>
</CustomField>