force-app/main/default/objects/Purchase_Order__c/fields/Sold_to_Party_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Party_Legal_Name__c</fullName>
    <formula>Brand_Quote__r.Receiver_Name__r.Name</formula>
    <label>Sold to Party Legal Name</label>
    <type>Text</type>
</CustomField>