force-app/main/default/objects/Purchase_Order__c/fields/Supplier_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Supplier_City_State_Zip__c</fullName>
    <formula>Text(Supplier_License__r.License_City__c)  + &quot;, &quot; +
Text(Supplier_License__r.License_State__c) + &quot;, &quot; +
Supplier_License__r.License_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier City, State, Zip</label>
    <type>Text</type>
</CustomField>