force-app/main/default/objects/Purchase_Order__c/fields/Supplier_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_First_Name__c</fullName>
    <description>used in conga email template. DO NOT DELETE</description>
    <formula>Supplier_Contact__r.FirstName</formula>
    <label>Supplier First Name</label>
    <type>Text</type>
</CustomField>