force-app/main/default/objects/Purchase_Order__c/fields/Supplier_License__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier License</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>State_Licenses__c.State_License_Holder__c</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier_Name__c</valueField>
        </filterItems>
        <filterItems>
            <field>State_Licenses__c.License_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>