force-app/main/default/objects/Purchase_Order__c/fields/Supplier_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License_Expiration_Date__c</fullName>
    <formula>Supplier_License__r.License_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier License Expiration Date</label>
    <type>Date</type>
</CustomField>