force-app/main/default/objects/Purchase_Order__c/fields/Supplier_Payable_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Payable_Date__c</fullName>
    <inlineHelpText>Date in which supplier is eligible to be paid. Automation from workflow to calculate delivery date and payment terms considering payment distribution schedule every Fridays.</inlineHelpText>
    <label>Supplier Payable Date</label>
    <type>Date</type>
</CustomField>