force-app/main/default/objects/Purchase_Order__c/fields/Total_Cancelled_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Cancelled_Lines__c</fullName>
    <label>Total Cancelled Lines</label>
    <summaryFilterItems>
        <field>Purchase_Order_Line__c.POLI_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>