force-app/main/default/objects/Purchase_Order__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <inlineHelpText>Total PPO Cost</inlineHelpText>
    <label>Total Cost</label>
    <summarizedField>Purchase_Order_Line__c.Line_Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Purchase_Order_Line__c.POLI_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>