force-app/main/default/objects/Purchase_Order__c/fields/Total_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Cultivation_Tax__c</fullName>
    <label>Total Cultivation Tax</label>
    <summarizedField>Purchase_Order_Line__c.Subtotal_Cultivation_Tax__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>