force-app/main/default/objects/Purchase_Order__c/fields/Total_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Items__c</fullName>
    <inlineHelpText>Total PO Line Items Count</inlineHelpText>
    <label>Total Line Items</label>
    <summaryFilterItems>
        <field>Purchase_Order_Line__c.POLI_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>