force-app/main/default/objects/Purchase_Order__c/fields/Total_Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Made__c</fullName>
    <inlineHelpText>Total amount of payments made to supplier from bill pay records.</inlineHelpText>
    <label>Total Payments Made</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>