force-app/main/default/objects/Purchase_Order__c/fields/Total_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_lbs__c</fullName>
    <label>Total Weight (lbs)</label>
    <summarizedField>Purchase_Order_Line__c.Total_Weight_lbs__c</summarizedField>
    <summaryFilterItems>
        <field>Purchase_Order_Line__c.POLI_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>