force-app/main/default/objects/Purchase_Order__c/fields/Window_End__c.field-meta.xml
<CustomField>
    <fullName>Window_End__c</fullName>
    <inlineHelpText>Latest time supplier for pick-up</inlineHelpText>
    <label>Window End</label>
    <type>Time</type>
</CustomField>