force-app/main/default/objects/Purchase_Order__c/fields/Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Window_Start__c</fullName>
    <inlineHelpText>Earliest time supplier for pick-up</inlineHelpText>
    <label>Window Start</label>
    <type>Time</type>
</CustomField>